# Story-Telling-Reels

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  log.md  roadmap.md  roadmap.md.patch
backend/: .env.example  Dockerfile  celeryconfig.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  jobs.py  scenes.py  stories.py  upload.py  voices.py  ws.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  job.py  scene.py  story.py  user.py  voice_profile.py
backend/app/schemas/: auth.py  job.py  scene.py  story.py  voice.py
backend/app/services/: arabic_utils.py  asset_generator.py  auth_service.py  comfyui_client.py  redis_pubsub.py  social_upload.py  story_parser.py  video_compiler.py  xtts_service.py
backend/app/tasks/: story_tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useJobProgress.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  NewStory.tsx  StoryDetail.tsx
memory/: 2026-04-28.md
